[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pve-clone"
version = "1.0.7"
dependencies = ["ch9329"]
requires-python = ">=3"
authors = [{ name = "Pradish Bijukchhe", email = "pradish@sandbox.com.np" }]
description = ""
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
Homepage = "https://github.com/sandbox-pokhara/pve-clone"
Issues = "https://github.com/sandbox-pokhara/pve-clone/issues"

[project.scripts]
pve-clone = "pve_clone.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"pve_clone" = "pve_clone"

[tool.isort]
line_length = 79
force_single_line = true

[tool.black]
line-length = 79
preview = true

[tool.pyright]
include = ["pve_clone", "test.py"]
typeCheckingMode = "strict"
